--- a/catshop/templates/catshop_home.html
+++ b/catshop/templates/catshop_home.html
@@ -9,11 +9,38 @@
         <header class="text-bg-dark p-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder"> کتشاپ! </h1>
+                    <h1 class="display-4 fw-bolder"> کـتشــــــاپ! </h1>
                     <p class="lead fw-normal text-white-50 mb-0"> هر چیزی که گربه خونگیت لازم داره رو اینجا بخر!  </p>
                 </div>
             </div>
         </header>
+        <section class="py-5">
+            <div class="container px-5 px-lg-6 mt-5" style="background-color:orange ">
+                <h2 class="text-center text-white" > جدیدترین محصولات </h2><br>
+                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center" >
+                    {% for item in new_products %}
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="{{ item.picture.url }}" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h6 class="fw-bolder">{{ item.name }}</h6>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'product' item.id %}">برو به صفحه محصول</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </section>
+    
         <!-- Section-->
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
@@ -25,7 +52,11 @@
                             <!-- Sale badge-->
                             <div class="badge bg-danger text-white position-absolute" style="top: 0.5rem; right: 0.5rem">تخفیف ویژه</div>
                             <!-- Product image-->
+                            {% if item.stock > 0 %}
                             <img class="card-img-top" src="{{ item.picture.url }}" alt="..." />
+                            {% else %}
+                            <img class="card-img-top" src="{{ item.picture.url }}" alt="..." style="filter: grayscale(100%); transition: filter 0.3s ease; " />
+                            {% endif %}
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -53,7 +84,11 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
+                            {% if item.stock > 0 %}
                             <img class="card-img-top" src="{{ item.picture.url }}" alt="..." />
+                            {% else %}
+                            <img class="card-img-top" src="{{ item.picture.url }}" alt="..." style="filter: grayscale(100%); transition: filter 0.3s ease; " />
+                            {% endif %} 
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
