--- a/catlog/templates/author_posts.html
+++ b/catlog/templates/author_posts.html
@@ -23,7 +23,7 @@
                 <!-- User Info -->
                 <div class="col-md-9">
                     <h3 class="mb-1">{{ author.username }}</h3>
-                    <p class="text-muted mb-2">{{ auther.biography }}</p>
+                    <p class="text-muted mb-2">{{ author_profile.biography }}</p>
                     <p>تعداد پست‌ها: <strong>{{ posts.count }}</strong></p>
                 </div>
             </div>
