--- a/catshop/templates/category_summary.html
+++ b/catshop/templates/category_summary.html
@@ -14,11 +14,13 @@
     <center>
       <div class="col-10">
         <p align="justify">
+          
           {% for cat in category %}
-          <div class="list-group">
-            <a href="{% url 'category' cat.name %}" class="list-group-item list-group-item-action list-group-item-warning" ><h4>{{ cat.name }}</h4></a>
-          </div>
+             <div class="row">
+            <a href="{% url 'category' cat.name %}" class="btn btn-outline-warning btn-lg"" role="button" ><h4>{{ cat.name }}</h4></a><br>
+             </div>
           {% endfor %}
+          
         </p>
       </div>
     </center>
