--- a/pishi/templates/index.html
+++ b/pishi/templates/index.html
@@ -9,7 +9,7 @@
                 <div class="row gx-5 align-items-center justify-content-center">
                     <div class="col-lg-8 col-xl-7 col-xxl-6">
                         <div class="my-5 text-center text-xl-start">
-                            <h1 class="display-5 fw-bolder text-white mb-2 "dir="rtl" align="right">به پیشی&#128008;نیان خوش آمدید</h1>
+                            <h1 class="display-5 fw-bolder text-white mb-2 "dir="rtl" align="right" >    پیشیــــ&#128008;ـــــنیان    </h1>
                             <p class="lead fw-normal text-white-50 mb-4" dir="rtl" align="right"> اینجا پر از پیشیه!</p><br><br>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                 <a class="btn btn-warning btn-lg px-4 me-sm-3" href="{% url 'catshop_home' %}"> کتشاپ </a>
