--- a/pishi/templates/index.html
+++ b/pishi/templates/index.html
@@ -10,14 +10,18 @@
                     <div class="col-lg-8 col-xl-7 col-xxl-6">
                         <div class="my-5 text-center text-xl-start">
                             <h1 class="display-5 fw-bolder text-white mb-2 "dir="rtl" align="right" >    پیشیــــ&#128008;ـــــنیان    </h1>
-                            <p class="lead fw-normal text-white-50 mb-4" dir="rtl" align="right"> اینجا پر از پیشیه!</p><br><br>
+                            <p class="lead fw-normal text-white-50 mb-4" dir="rtl" align="right"> اینجا پر از پیشیه!</p><br>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                 <a class="btn btn-warning btn-lg px-4 me-sm-3" href="{% url 'catshop_home' %}"> کتشاپ </a>
                                 <a class="btn btn-outline-light btn-lg px-4" href="{% url 'catlog' %}"> کتلاگ </a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..."></div>
+                    <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
+                        <img class="img-fluid rounded-circle my-3 shadow" src="static/assets/ss.jpg" alt="..." >
+                    </div>
+                    
+                    </div>
                 </div>
             </div>
         </header>
