like with AJAX created

--- a/catlog/templates/single_post.html
+++ b/catlog/templates/single_post.html
@@ -34,31 +34,25 @@
                     {% endif %}
                      
 
+                    <div dir="rtl">
+                        <button class="btn btn-outline-dark mt-auto" onclick="history.back()">بازگشت به صفحه قبلی</button>
+                    </div>
+                    
+
 
 
                     <br><br>
-                    <div dir="ltr">
-                    <form action="{% url 'toggle_like' post.pk %}" method="POST" style="display: inline;">
-                        {% csrf_token %}
-                        <button type="submit" style="border: none; background: none; cursor: pointer;">
-                            {% if request.user in post.likes.all %}
-
-                                <button class="btn btn-outline-danger"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
-                                    <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
-                                  </svg></button> &nbsp; {% if post.total_likes > 1 %} {{ post.total_likes }} likes 
-                                  {% else %}  {{ post.total_likes }} like {% endif %}
-
-                            {% else %}
-
-                                <button class="btn btn-outline-danger"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                                    <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                                  </svg></button> &nbsp; {% if post.total_likes > 1 %} {{ post.total_likes }} likes 
-                                                    {% else %}  {{ post.total_likes }} like {% endif %} 
-
-                            {% endif %}
-                        </button>
-                    </form>
-                </div>
+                   <!-- دکمه لایک -->
+<div dir="ltr" id="like-section" data-post-id="{{ post.pk }}">
+    <button id="like-btn-{{ post.pk }}"  data-post-id="{{ post.pk }}"  data-liked="{% if request.user in post.likes.all %}true{% else %}false{% endif %}" class="btn btn-outline-danger like-btn" >
+        {% if request.user in post.likes.all %}
+            ❤️ لایک شده
+        {% else %}
+            🤍 لایک
+        {% endif %}
+    </button>
+    <span id="like-count-{{ post.pk }}">{{ post.likes.count }}</span>  like
+</div>
                     
                     <br><br><br>
                 </article>
@@ -170,5 +164,37 @@
         </div> <!-- End of row -->
     </div> <!-- End of container -->
 </body>
+
+
+<!-- جاوااسکریپت برای AJAX -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function() {
+        $('.like-btn').click(function() {
+            var postId = $(this).data('post-id');
+            var csrftoken = $('meta[name="csrf-token"]').attr('content'); 
+    
+            $.ajax({
+                url: "{% url 'toggle_like' 0 %}".replace('0', postId),  // استفاده از مسیر URL داینامیک
+                type: 'POST',
+                headers: { 'X-CSRFToken': csrftoken },
+                success: function(response) {
+                    if (response.liked) {
+                        $(`#like-btn-${postId}`).html('❤️ لایک شده');
+                    } else {
+                        $(`#like-btn-${postId}`).html('🤍 لایک');
+                    }
+                    $(`#like-count-${postId}`).text(response.like_count);
+                },
+                error: function(xhr, status, error) {
+                    console.error("Error: ", error);
+                    alert('مشکلی پیش آمده است!');
+                }
+            });
+        });
+    });
+    </script>
+    
+
 
 {% endblock %}
