--- a/pishi/templates/navbar.html
+++ b/pishi/templates/navbar.html
@@ -16,7 +16,8 @@
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="{% url 'home' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false"> پروفایل </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="{% url 'update_user' %}">  پروفایل کاربری  </a></li><li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="{% url 'update_info' %}">  اطلاعات کاربری </a></li>
+                        <li><a class="dropdown-item" href="{% url 'update_info' %}">  اطلاعات کاربری </a></li><li><hr class="dropdown-divider" /></li>
+                        <li><a class="dropdown-item" href="{% url 'orders' %}">  سفارشات</a>
                     </ul>
                 </li>
 
